--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,7 @@
 title: My IT Docs
 remote_theme: pmarsceill/just-the-docs
+
+nav:
+  - Home: index.md
+  - Cloud: azure.md
+  - Local: active_directory_local.md
