--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,8 @@
 title: My IT Docs
 remote_theme: pmarsceill/just-the-docs
 color_scheme: dark
-
+highlighter: rouge
+markdown: kramdown
 nav:
   - Home: Home
   - Cloud: Azure
